--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@ body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
     rgb(var(--background-start-rgb));
+  font-weight: 500;
 }
 
 @layer utilities {
