--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@ body {
   color: rgb(var(--text-color));
   background: rgb(var(--background-color));
   font-weight: 500;
+  scroll-margin-top: 70px;
 }
 
 @layer utilities {
