(fix) add favicon, manifest & fix mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,12 +5,13 @@
 :root {
   --text-color: 255, 255, 255;
   --background-color: 0, 0, 0;
-  overscroll-behavior: none;
+  /* overscroll-behavior: none; */
 }
 
 html {
-  scrollbar-gutter: stable;
-  overscroll-behavior: none;
+  /* scrollbar-gutter: stable; */
+  /* overscroll-behavior: none; */
+  background: rgb(var(--background-color));
 }
 
 body {
@@ -18,7 +19,7 @@ body {
   background: rgb(var(--background-color));
   font-weight: 500;
   scroll-behavior: smooth;
-  overscroll-behavior: none;
+  /* overscroll-behavior: none; */
 }
 
 @layer utilities {
@@ -29,24 +30,10 @@ body {
     text-wrap: pretty;
   }
 }
-/* 
-html.lenis,
-html.lenis body {
-  height: auto;
-}
 
-.lenis.lenis-smooth {
-  scroll-behavior: auto !important;
+@media (min-width: 768px) {
+  html,
+  body {
+    overscroll-behavior: none;
+  }
 }
-
-.lenis.lenis-smooth [data-lenis-prevent] {
-  overscroll-behavior: contain;
-}
-
-.lenis.lenis-stopped {
-  overflow: hidden;
-}
-
-.lenis.lenis-scrolling iframe {
-  pointer-events: none;
-} */
